--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-<h1>Ian Kelley</h1>
-
-<h2>&quot;First&quot; Web</h2>
-
-<h2>Favorite Things</h2>
-
-<p>VCD</p>
-
-<p>Leo</p>
-
-<p>Steak</p>
-
-<p>Little by little one travels far.</p>
+<html>
+<body>
+    <h1>Hello World</h1>
+    <p>I'm hosted with Github Pages.</p>
+    <p>Hopefully...</p>
+</body>
+<html>
