--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8"
+    <title> Hello World</head>title>
+</head>
 <body>
     <h1>Hello World</h1>
     <p>I'm hosted with Github Pages.</p>
     <p>Hopefully...</p>
+<ul>
 </body>
 <html>
