Update with one unordered list.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <p>I'm hosted with Github Pages.</p>
     <p>Hopefully...</p>
 <ul>
+    <li><a href="http://www.cryptarismission.com/#!/main-menu"> Cryptar is Mission.</a><p>I like the centered menu. I like the minimal, thin, bleak type used. It reminds me of video I watched about Norse mythology. The title of the video felt cold and bleak. It used a slim, sans serif typeface. I like the simplicity of this menu. The user experience is straight forward and accessible.</p></li>
+    <li><a href="</li>
 </body>
 <html>
