--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"
-    <title> Ian Kelley's WEB DESN 1
+    <meta charset="utf-8">
+    <title> Ian Kelley</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Hello World</h1>
-    <ptag1>I'm hosted with Github Pages.</ptag1>
-    <ptag2>Hopefully...</ptag>
+    <header> Ian Kelley</header>
+    <h1>Portfolio</h1>
+
 <ul>
     <li><a href="http://www.cryptarismission.com/#!/main-menu"> Cryptar is Mission.</a><p>I like the centered menu. I like the minimal, thin, bleak type used. It reminds me of video I watched about Norse mythology. The title of the video felt cold and bleak. It used a slim, sans serif typeface. I like the simplicity of this menu. The user experience is straight forward and accessible.</p></li>
     <li><a href="http://www.evo.com/"> Evo.</a><p> This is one of my favorite retail websites to purchase my outdoor clothing and gear. I like the 5 circles that correspond to the rotating pictures that slide across the screen. In this class, I would like to make a portfolio website for my work. These sliding pictures could be a preview of my work that directs viewers to my work. I also enjoy the clean and orderly rectangles that contain pictures and text below. Instead of a centered column menu, these rectangles could be used to help navigate the user experience.</p></li>
