--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
     <header> Ian Kelley</header>
     <h1>Portfolio</h1>
-
+<section>
+    <ul>
+        <li><a href="AboutMe"></a></li>
+    </ul>
+</section>
 <section>
     <h1> Exploring Web Design - Class 2.</h1>
     <ul>
