Updated Index Class 4

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Portfolio</h1>
 <section>
     <ul>
-        <li><a href="AboutMe"></a></li>
+        <li><a href="AboutMe"> About Me</a></li>
     </ul>
 </section>
 <section>
