CSS with Nav Day 4
Adding Structure Assignment. Day 4

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header> Ian Kelley</header>
-    <h1>Portfolio</h1>
+    <header> <strong>Ian Kelley</header></strong>
+    <h1><strong>Portfolio</h1></strong>
 <section>
     <ul>
         <li><a href="AboutMe"> About Me</a></li>
