Adding Structure Assignment -Class 4
Completed Assignment commit.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header> <strong>Ian Kelley</header></strong>
-    <h1><strong>Portfolio</h1></strong>
+    <header> <strong>Ian Kelley</strong></header>
+    <h1><strong>Portfolio</strong></h1>
 <section>
     <ul>
-        <li><a href="AboutMe"> About Me</a></li>
+        <li><a href="AboutMe.html"> About Me</a></li>
     </ul>
 </section>
 <section>
