--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1><strong>Portfolio</strong></h1>
 <section>
     <ul>
-        <li><a href="AboutMe.html"> About Me</a></li>
+        <li><a href="Portfolio.html">Portfolio</a></li>
+        <li><a href="AboutMe.html">About Me</a></li>
+        <li><a href="Contact.html">Contact</a></li>
     </ul>
 </section>
 <section>
