--- a/box-model-assignment/box-model.html
+++ b/box-model-assignment/box-model.html
@@ -12,7 +12,7 @@
     </nav>
     <section>
       <header>
-        <h1>Box Model Practice</h1>
+        <h1><strong>Box Model Practice</strong></h1>
         <h3>Applying what we've learned about the box model.</h3>
       </header>
       <article>
