--- a/LayoutPractice/index.html
+++ b/LayoutPractice/index.html
@@ -11,17 +11,21 @@
           <header>
         <div class="branding"></div>
         <nav>
-            <a href="#">Lorem</a>
-            <a href="#">Impsum</a>
-            <a href="#">Dolor</a>
+            <a class="pill-button" href="#">Lorem</a>
+            <a class="pill-button" href="#">Impsum</a>
+            <a class="pill-button" href="#">Dolor</a>
         </nav>
       </header>
         <section id="big-promo">
-            <div>
-            <h1>Lorem ipsum dolor sit amet</h1>
-            <p>Mauris sed iaculis mauris. Cras congue pulvinar laoreet.
+            <div class="promo-message">
+                <h1>Lorem ipsum dolor sit amet</h1>
+                <p>Mauris sed iaculis mauris. Cras congue pulvinar laoreet.
                 Mauris quis elit feugiat, vehicula enim et, tempus tellus.
                 Vestibulum sed risus libero.</p>
+                <div>
+                    <a class="pill-button promo" href="#">Lorem</a>
+                    <a class="pill-button promo" ref="#">Impsum</a>
+                </div>
             </div>  
         </section>
       </div>
