Portfolio Webpage 66%complete

--- a/Portfolio/iankelley_portfolio.html
+++ b/Portfolio/iankelley_portfolio.html
@@ -13,24 +13,17 @@
         <h1 class="header-name"> Ian Kelley</h1>
         </div>
         <nav>
-            <a class="Nav-button" href="portfolio.html">Home</a>
-            <a class="Nav-button" href="contact.html">Portfolio</a>
-            <a class="Nav-button" href="iankelley_portfolio.html">Contact</a>
+            <a class="Nav-button" href="ian_portfolio.html">Home</a>
+            <a class="Nav-button" href="iankelley_work.html">Portfolio</a>
+            <a class="Nav-button" href="iankelley_contact.html">Contact</a>
         </nav>
       </header>
-        <section id="big-promo">
-            <div class="promo-message">
-                <h1>Lorem ipsum dolor sit amet</h1>
-                <p>Mauris sed iaculis mauris. Cras congue pulvinar laoreet.
-                Mauris quis elit feugiat, vehicula enim et, tempus tellus.
-                Vestibulum sed risus libero.</p>
-                <div>
-                    <a class="pill-button promo" href="#">Lorem</a>
-                    <a class="pill-button promo" ref="#">Impsum</a>
-                </div>
-            </div>  
-        </section>
+        <section>
+            <a strong class="circle-button" href="iankelley_work.html">Portfolio</a>
+            <a strong class="circle-button" href="iankelley_contact.html">Contact</a>
+          </section> 
       </div>
-    </div>
-    </body>
+      <footer> <small>Ian Kelley
+          </small></footer>
+</body>
 </html>
