--- a/LayoutPractice/index.html
+++ b/LayoutPractice/index.html
@@ -93,7 +93,14 @@
         
     </section>
     <footer>
-        <div class="footer-box"></div>
+        <div class="footer-links"> 
+            <a href="#">link 1</a>
+            <a href="#">link 2</a>
+            <a href="#">link 3</a>
+        </div>
+        <div class="footer-copy"> 
+            <p> Sweet Copy Right Notice.</p>
+        </div>
     </footer>
     </div>
     </body>
