--- a/LayoutAssignment/layout-assignment.html
+++ b/LayoutAssignment/layout-assignment.html
@@ -25,8 +25,10 @@
        
         <div class="example-3">
             <div class="header"></div>
-            <div class="aside"></div>
-            <div class="body"></div>
+                <div class="container-example">
+                    <div class="aside"></div>
+                    <div class="body"></div>
+                </div>
         </div>
     </div>
  
