--- a/Robot/Robot.html
+++ b/Robot/Robot.html
@@ -31,6 +31,11 @@
             <div class="foot"></div>
         </div>
     
+        <div class="poop">
+            <div id="poop-top"></div>
+            <div id="poop-mid"></div>
+            <div id="poop-bot"></div>
+        </div>
     </div>
  
 </body>
