--- a/LayoutPractice/index.html
+++ b/LayoutPractice/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Layout Practice</title>
-    <link rel=stylesheet href="LayoutPractice.css"/>
+        <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+        <link rel=stylesheet href="LayoutPractice.css"/>
   </head>
   <body>
       <div class="main-container">
