features added text

--- a/WEB FINAL/final-homepage.html
+++ b/WEB FINAL/final-homepage.html
@@ -27,19 +27,40 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat mi, tristique in scelerisque non, ultrices at diam. In elit felis, consequat
 vitae tincidunt blandit, vestibulum ut ligula.</p>
                 </div>
+                <div class="pricing">Pricing</div>
             </div>
         <div class="feature-container">
             <div class="feature-item-1"> 
                 <img src="Photos/hiking.jpg" style="width:200px;height:200px">
+            <h1>Hiking</h1>
+            <p>Nunc pulvinar quam eu arcu
+cursus, ac vestibulum diam lacinia.
+Nunc turpis justo, euismod ac
+mauris vel, luctus molestie magna.</p>
             </div>
             <div class="feature-item-2">
                 <img src="Photos/kayaking.jpg" style="width:200px;height:200px">
+            <h1>Kayaking</h1>
+                <p>Nunc pulvinar quam eu arcu
+cursus, ac vestibulum diam lacinia.
+Nunc turpis justo, euismod ac
+mauris vel, luctus molestie magna.</p>
             </div>
             <div class="feature-item-3">
                 <img src="Photos/horse.jpg" style="width:200px;height:200px">
+            <h1>Horseback Riding</h1>
+                <p>Nunc pulvinar quam eu arcu
+cursus, ac vestibulum diam lacinia.
+Nunc turpis justo, euismod ac
+mauris vel, luctus molestie magna.</p>
             </div>
             <div class="feature-item-4">
                 <img src="Photos/moose.jpg" style="width:200px;height:200px">
+            <h1>Cabin Rentals</h1>
+                <p>Nunc pulvinar quam eu arcu
+cursus, ac vestibulum diam lacinia.
+Nunc turpis justo, euismod ac
+mauris vel, luctus molestie magna.</p>
             </div>
             
             
