pricing button fixed

--- a/WEB FINAL/final-homepage.html
+++ b/WEB FINAL/final-homepage.html
@@ -27,7 +27,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat mi, tristique in scelerisque non, ultrices at diam. In elit felis, consequat
 vitae tincidunt blandit, vestibulum ut ligula.</p>
                 </div>
-                <div class="pricing">Pricing<a class="pricing-button" href="pricing.html"></a>
+                <div class="pricing"><a class="pricing-button" href="pricing.html">Pricing</a>
                 </div>
             </div>
         <div class="feature-container">
