--- a/WEB FINAL/final-homepage.html
+++ b/WEB FINAL/final-homepage.html
@@ -23,7 +23,7 @@
             </header>
             <div class="sign-up-today">
                 <div class="today">
-                    <h1>Sign Up Today!</h1>
+                    <h1>Sign Up Today</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat mi, tristique in scelerisque non, ultrices at diam. In elit felis, consequat
 vitae tincidunt blandit, vestibulum ut ligula.</p>
                 </div>
