pricing button works

--- a/WEB FINAL/final-homepage.html
+++ b/WEB FINAL/final-homepage.html
@@ -56,7 +56,7 @@ Nunc turpis justo, euismod ac
 mauris vel, luctus molestie magna.</p>
             </div>
             <div class="feature-item-4">
-                <img src="Photos/moose.jpg" style="width:200px;height:200px">
+                <img src="Photos/cabin-rental.jpg" style="width:200px;height:200px">
             <h1>Cabin Rentals</h1>
                 <p>Nunc pulvinar quam eu arcu
 cursus, ac vestibulum diam lacinia.
