Pricing page done
buttons work

--- a/WEB FINAL/pricing.html
+++ b/WEB FINAL/pricing.html
@@ -34,7 +34,19 @@ Aliquam tincidunt mauris eu risus. Vestibulum auctor dapibus neque.</p><a class=
             </div>
         </div>
         <div class="not-convinced"><h1>Not Convinced?</h1><p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat mi, tristique in scelerisque non, ultrices at diam. In elit felis, consequat vitae tincidunt blandit, vestibulum ut ligula.</p></div>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat mi, tristique in scelerisque non, ultrices at diam. In elit felis, consequat vitae tincidunt blandit, vestibulum ut ligula.</p><a class="blog-button"href="blog.html">Our Blog</a></div>
     </div>
+
+    
+    <footer>
+    <div class="footer-links"> 
+            <a href="final-homepage.html">Home</a>
+            <a href="features.html">Features</a>
+            <a href="pricing.html">Pricing</a>
+            <a href="blog.html">Blog</a>
+        <p> Ian Kelley - DESN 368 - Winter 2016.</p>
+    </div>
+
+</footer>            
 </body>
 </html>
